--- a/day_07.css
+++ b/day_07.css
@@ -2,7 +2,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "sans-serif","pretendard";
   overflow-x: hidden;
 }
 
